[project]
name = "finalproject-golubtsov-valerii-m25-555"
version = "0.1.0"
description = "Финальный проект Python"
authors = [
    {name = "Valerii Golubtsov",email = "golubcov.valera@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
packages = [
	{ include = "valutatrade_hub" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
