[project]
name = "finalproject-golubtsov-valerii-m25-555"
version = "0.1.0"
description = "Финальный проект Python"
authors = [
    {name = "Valerii Golubtsov",email = "golubcov.valera@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "requests (>=2.32.5,<3.0.0)",
    "prettytable (>=3.17.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [
    { include = "valutatrade_hub" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.valutatrade]
data_directory = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_directory = "logs"
log_level = "INFO"
log_format = "text"
max_log_size_mb = 10
backup_log_files = 5
supported_currencies = ["USD", "EUR", "RUB", "GBP", "JPY", "CNY", "BTC", "ETH", "LTC", "XRP"]

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[dependency-groups]
dev = [
    "ruff (>=0.14.2, <0.15.0)"
]
